RESOLVED FIXED286990
Fix smart pointer warnings in NetworkTaskCocoa.mm
https://bugs.webkit.org/show_bug.cgi?id=286990
Summary Fix smart pointer warnings in NetworkTaskCocoa.mm
Ryosuke Niwa
Reported 2025-02-03 21:27:07 PST
Fix smart pointer static analyzer warnings in NetworkTaskCocoa.mm.
Attachments
Ryosuke Niwa
Comment 1 2025-02-03 21:29:30 PST
EWS
Comment 2 2025-02-04 11:34:44 PST
Committed 289810@main (f35b9c9f6ea7): <https://commits.webkit.org/289810@main> Reviewed commits have been landed. Closing PR #39965 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-04 11:35:18 PST
Note You need to log in before you can comment on or make changes to this bug.