Fix smart pointer warnings in NetworkTaskCocoa.mm https://bugs.webkit.org/show_bug.cgi?id=286990

Reviewed by Chris Dumez.

Fixed smart pointer static analyzer warnings in NetworkTaskCocoa.mm.

* Source/WebKit/NetworkProcess/cocoa/NetworkTaskCocoa.mm:
(WebKit::computeIsAlwaysOnLoggingAllowed):
(WebKit::NetworkTaskCocoa::shouldRelaxThirdPartyCookieBlocking const):
* Source/WebKit/SaferCPPExpectations/UncheckedCallArgsCheckerExpectations:
* Source/WebKit/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/289810@main